<resources>
    <string name="app_name">SmartShoppingList</string>
    <string name="action_new">New</string>
    <string name="title_new_header_dialog">Enter name</string>
    <string name="btn_ok" translatable="false">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="action_delete_all">Delete all</string>
    <string name="delete_all_confirmation">Delete ALL items?</string>
    <string name="action_show_catalogs">Catalogs</string>
    <string name="action_show_groups">Groups</string>
    <string name="action_show_goods">Goods</string>
    <string name="action_show_about">Contacts</string>
    <string name="action_show_settings">Settings</string>

    <string name="title_activity_groups_list">Groups</string>
    <string name="action_settings">Settings</string>
    <string name="title_new_group_dialog">New group</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_text">Delete item ?</string>
    <string name="action_new_group">Add new group</string>
    <string name="title_goods_list">Goods catalog</string>
</resources>
